--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
   </head>
 
   <body>
+  
     <header id="header" class="alt">
       <div class="logo">
         <a href="index.html">Eric <span>by Niemo Family</span></a>
+        <audio autoplay>
+          <source src="./makemescream-b02.mp3" type="audio/mpeg" />
+        </audio>
       </div>
     </header>
 
     <!-- Banner -->
+
     <section id="banner">
       <div class="inner">
         <header>
